# coding-dojo

./: .gitignore  README.md
2022-12-16/: README.md
2022-12-16/aocday10/: CHANGELOG.md  README.md  aocday10.cabal  package.yaml  stack.yaml
2022-12-16/aocday10/test/: Day10Spec.hs
2023-01-06/: README.md
2023-01-06/diplomacy2/: CHANGELOG.md  diplomacy2.cabal
2023-01-06/diplomacy2/lib/: Diplomacy.hs
2023-01-06/diplomacy2/test/: DiplomacySpec.hs
2023-01-20/: README.md
2023-01-20/lambda/: Cargo.toml
2023-01-20/lambda/src/: main.rs
2023-02-03/: README.md
2023-02-03/aoc12/: CHANGELOG.md  aoc12.cabal  tcr
2023-02-03/aoc12/src/: AOC.hs
2023-02-03/aoc12/test/: AOCSpec.hs
2023-03-10/: README.md
2023-03-10/ring-buffer/: README.md  hello.cabal
2023-03-10/ring-buffer/test/: HelloSpec.hs
2023-03-17/: README.md
2023-03-17/ringbuffer/: CHANGELOG.md  ringbuffer.cabal
2023-03-17/ringbuffer/benchmark/: RingBufferBenchmark.hs
2023-03-17/ringbuffer/src/: RingBuffer.hs
2023-03-17/ringbuffer/test/: RingBufferSpec.hs
template/: README.md
template/hello/: flake.nix  hello.cabal
template/hello/test/: HelloSpec.hs
vm/: README.md  dojo.tf  ssh_keys
vm/scripts/: configure.sh
