cabal-version:      2.4
name:               diplomacy2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yvan Sraka
maintainer:         yvan@sraka.xyz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    -- Modules included in this executable, other than Main.
    -- other-modules:
    exposed-modules: Diplomacy

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base 
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite tests
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  other-modules:
    DiplomacySpec

  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , base
    , hspec
    , hspec-core
    , QuickCheck
    , diplomacy2

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded -rtsopts

