cabal-version:      2.4
name:               aoc12
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             IOG Engineering
maintainer:         engineering@iohk.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc12
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010


library
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:   AOC
  
test-suite tests
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  other-modules:    AOCSpec

  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , base
    , hspec
    , hspec-core
    , QuickCheck
    , aoc12

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded -rtsopts

    
